2008-11-21  Aaron Bockover  <abock@gnome.org>

	* data/banshee-1.desktop.in.in:
	* data/mimetypes.txt: Remove Real Audio/Video mime types (BNC #440615)

2008-11-18  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Libraries/Hyena.Gui/Hyena.Data.Gui/ListView/ListView_Interaction.cs:
	Patch from Brandon Perry fixing warning that mono svn raises (BGO #561392)

2008-11-17  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Core/Banshee.ThickClient/Banshee.Equalizer.Gui/EqualizerWindow.cs:
	Patch from Erik Schmidt adding support for hitting Esc to close the
	equalizer dialog (BGO #552818).

2008-11-12  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Dap/Banshee.Dap.MassStorage/Banshee.Dap.MassStorage/MassStorageSource.cs:
	Patch from Benjamín Valero Espinosa fixing bug that prevented the last
	tracks in a folder from being deleted (BGO #560550).

2008-11-10  Aaron Bockover  <abock@gnome.org>

	Banshee 1.4.1 Released

2008-11-10  Aaron Bockover  <abock@gnome.org>

	* configure.ac:
	* src/AssemblyInfo.cs.in:
	* src/Core/Banshee.Services/Banshee.ServiceStack/Application.cs: Added a
	third version concept, since we need the assembly version to stay the
	same to reflect the stable API version

2008-11-10  Aaron Bockover  <abock@gnome.org>

	* src/Dap/Banshee.Dap.MassStorage/Banshee.Dap.MassStorage/AndroidDevice.cs:
	Return the device name simply as what's in the VendorProductInfo
	object

	* src/Dap/Banshee.Dap.MassStorage/Banshee.Dap.MassStorage.addin.xml:
	Change to Android G1 Phone, detaching from T-Mobile

2008-11-10  Aaron Bockover  <abock@gnome.org>

	* src/Dap/Banshee.Dap/Banshee.Dap.Gui/DapPropertiesDisplay.cs: Extend
	Gtk.Alignment and render the frame manually so content can be
	centered

	* src/Dap/Banshee.Dap/Banshee.Dap.Gui/DapContent.cs: Reworked content
	layout to be more visually appealing and space optimizing

	* src/Dap/Banshee.Dap.MassStorage/ThemeIcons/16x16/categories/amazon-mp3-source.png: